[gd_scene load_steps=3 format=3 uid="uid://ch8h52ad5pp5f"]

[ext_resource type="Script" uid="uid://bgycewqq7mu2" path="res://root.gd" id="1_pq8q7"]
[ext_resource type="Script" uid="uid://cbal3yqrnqrkv" path="res://slider_parent.gd" id="2_pyidc"]

[node name="root" type="Node"]
script = ExtResource("1_pq8q7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 259.0
grow_vertical = 2
color = Color(0, 0, 0, 0.0745098)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -47.0
offset_right = -28.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Restart" type="Button" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Add" type="Button" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "ADD NEW BOID"

[node name="Delete" type="Button" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "REMOVE BOID"

[node name="Radius" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_pyidc")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Radius"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "Radius (1 - 10)"
fit_content = true

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Radius"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.5
value = 1.0

[node name="Value" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Radius"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "1"
fit_content = true

[node name="Separation" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_pyidc")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Separation"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "Separation Weight (-10 - 10)"
fit_content = true

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Separation"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.5
value = 1.0

[node name="Value" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Separation"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "1
"
fit_content = true

[node name="Alignment" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_pyidc")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Alignment"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "Alignment Weight (-10 - 10)"
fit_content = true

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Alignment"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.5
value = 1.0
rounded = true

[node name="Value" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Alignment"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "1"
fit_content = true

[node name="Cohesion" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_pyidc")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Cohesion"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "Cohesion Weight (-10 - 10)"
fit_content = true

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Cohesion"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.5
value = 1.0

[node name="Value" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/VBoxContainer/Cohesion"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "1
"
fit_content = true

[connection signal="button_up" from="CanvasLayer/Control/ColorRect/VBoxContainer/Restart" to="." method="_on_button_button_up"]
[connection signal="button_up" from="CanvasLayer/Control/ColorRect/VBoxContainer/Add" to="." method="_on_add_button_up"]
[connection signal="button_up" from="CanvasLayer/Control/ColorRect/VBoxContainer/Delete" to="." method="_on_delete_button_up"]
